; ModuleID = '/home/carl/AnghaBench/RetroArch/gfx/drivers_context/extr_wgl_ctx.c_gfx_ctx_wgl_init.c'
source_filename = "/home/carl/AnghaBench/RetroArch/gfx/drivers_context/extr_wgl_ctx.c_gfx_ctx_wgl_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32, i32 }

@g_win32_inited = common dso_local global i64 0, align 8
@WndProcGL = common dso_local global i32 0, align 4
@win32_api = common dso_local global i32 0, align 4
@VULKAN_WSI_WIN32 = common dso_local global i32 0, align 4
@dll_handle = common dso_local global i32 0, align 4
@win32_vk = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i32*, i8*)* @gfx_ctx_wgl_init to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @gfx_ctx_wgl_init(i32* %0, i8* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca %struct.TYPE_3__, align 4
  %7 = alloca i8*, align 8
  store i32* %0, i32** %4, align 8
  store i8* %1, i8** %5, align 8
  %8 = bitcast %struct.TYPE_3__* %6 to i8*
  call void @llvm.memset.p0i8.i64(i8* align 4 %8, i8 0, i64 8, i1 false)
  %9 = call i64 @calloc(i32 1, i32 1)
  %10 = inttoptr i64 %9 to i8*
  store i8* %10, i8** %7, align 8
  %11 = load i8*, i8** %7, align 8
  %12 = icmp ne i8* %11, null
  br i1 %12, label %14, label %13

13:                                               ; preds = %2
  store i8* null, i8** %3, align 8
  br label %41

14:                                               ; preds = %2
  %15 = load i64, i64* @g_win32_inited, align 8
  %16 = icmp ne i64 %15, 0
  br i1 %16, label %17, label %19

17:                                               ; preds = %14
  %18 = call i32 @gfx_ctx_wgl_destroy(i32* null)
  br label %19

19:                                               ; preds = %17, %14
  %20 = call i32 (...) @win32_window_reset()
  %21 = call i32 (...) @win32_monitor_init()
  %22 = load i32, i32* @WndProcGL, align 4
  %23 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %6, i32 0, i32 0
  store i32 %22, i32* %23, align 4
  %24 = call i32 @win32_window_init(%struct.TYPE_3__* %6, i32 1, i32* null)
  %25 = icmp ne i32 %24, 0
  br i1 %25, label %27, label %26

26:                                               ; preds = %19
  br label %34

27:                                               ; preds = %19
  %28 = load i32, i32* @win32_api, align 4
  switch i32 %28, label %31 [
    i32 128, label %29
    i32 129, label %30
  ]

29:                                               ; preds = %27
  br label %32

30:                                               ; preds = %27
  br label %31

31:                                               ; preds = %27, %30
  br label %32

32:                                               ; preds = %31, %29
  %33 = load i8*, i8** %7, align 8
  store i8* %33, i8** %3, align 8
  br label %41

34:                                               ; preds = %26
  %35 = load i8*, i8** %7, align 8
  %36 = icmp ne i8* %35, null
  br i1 %36, label %37, label %40

37:                                               ; preds = %34
  %38 = load i8*, i8** %7, align 8
  %39 = call i32 @free(i8* %38)
  br label %40

40:                                               ; preds = %37, %34
  store i8* null, i8** %3, align 8
  br label %41

41:                                               ; preds = %40, %32, %13
  %42 = load i8*, i8** %3, align 8
  ret i8* %42
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memset.p0i8.i64(i8* nocapture writeonly, i8, i64, i1 immarg) #1

declare dso_local i64 @calloc(i32, i32) #2

declare dso_local i32 @gfx_ctx_wgl_destroy(i32*) #2

declare dso_local i32 @win32_window_reset(...) #2

declare dso_local i32 @win32_monitor_init(...) #2

declare dso_local i32 @win32_window_init(%struct.TYPE_3__*, i32, i32*) #2

declare dso_local i32 @free(i8*) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
